fixed pagination control alignment

--- a/src/app/good-deeds/good-deeds.component.css
+++ b/src/app/good-deeds/good-deeds.component.css
@@ -88,7 +88,7 @@
 }
 
 .city-margin{
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 @media only screen and (max-width: 1000px){
